Now only throws XBRLExceptions.